This contains features leading up to v1.0, including: Form return to form that was used to lodge a record when editing. Data Driven Menus Loads of browser rendering issues DarwinCore attributes are now configurable to not be mandatory Record filters and queries have been reworked and optimised Advanced review screen is now open for anonymous access My Sightings page has been completely reworked to include tables and downloads in a tabbed interface Content Services have been reworked again Many many more bug fixes.